syntax = "proto3";

package shop.srv.info;

import "shop-micro/shopproto/news/news.proto";
import "shop-micro/shopproto/video/video.proto";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_enum_prefix_all) = false;

service Info {
    rpc GetCategoryList (request) returns (VideoCategorysResp) {}
    rpc GetVideoDetail (VideoDetailReq) returns (shopproto.Video) {}
    rpc GetVideoList (InfoListReq) returns (VideoListResp) {}

    rpc GetNewsCategoryList (request) returns (NewsCategorysResp) {}
    rpc GetNewsList (InfoListReq) returns (NewsListResp) {}
}

message request {

}

message VideoDetailReq {
    int64 id = 1;
}

message InfoListReq {
    string category = 1;
    int32 pageNum = 2;
    int32 pageSize = 3;
}

message VideoListResp {
    repeated shopproto.Video videoList = 1;
}

message NewsListResp {
    repeated shopproto.News newsList = 1;
}

message VideoCategorysResp {
    repeated shopproto.VideoCategory VideoCategoryList = 1;
}

message NewsCategorysResp {
    repeated shopproto.NewsCategory newsCategoryList = 1;
}