syntax = "proto3";

package shop.srv.shopproto;

message Video {
    int64 id = 1;
    string title = 2;
    string thumbUrl = 3;
    string avatar = 4;
    string author = 5;
    string duration = 6;
    string readCount = 7;
    string commentCount = 8;
    int32 likeCount = 9;
    string category = 10;
    int32 viewType = 11;
    int32 isRecommend = 12;
    string content = 13;
    string tags = 14;
    string videoDesc = 15;
    VideoPusherInfo pusherInfo = 16;
}

message VideoCategory {
    int32 id = 1;
    string title = 3;
}

message VideoPusherInfo {
    string name = 1;
    string avatar = 2;
    string info = 3;
    string url = 4;
}